--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
     <!-- HERO -->
-    <div class="hero">
+    <div class="hero" id="hero">
         <div class="content">
             <div class="image" data-aos="zoom-in" data-aos-duration="1300"></div>
             <div class="text" data-aos="fade-left" data-aos-duration="1300">
@@ -41,6 +41,8 @@
                 <h1>Betim Hasani</h1>
                 <h2>And I Am a <span>Front End Developer!</span></h2>
                 <p>I design and build sleek, responsive, and user-friendly websites that bring ideas to life. With a passion for modern design and clean code, I create digital experiences that are fast, functional, and visually stunning.</p>
+             
+
                     <div class="social-icons">
                         <a href="https://www.facebook.com/profile.php?id=100089712801772" target="_blank"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.instagram.com/bbetimhasani/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
@@ -293,11 +295,11 @@
         <div class="quick-links">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Skills</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about-me">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
         <div class="quick-links">
@@ -318,9 +320,9 @@
           <ul>
           <li><a href="https://github.com/betimh" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i>github</a></li>
           <li><a href="https://www.linkedin.com/in/betimhasani" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i>Linked In</a></li>
-          <li><a href="https://www.instagram.com/betimhasani" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i>Instagram</a></li>
-          <li><a href="https://www.facebook.com/betimhasani" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i>Facebook</a></li>
-          <li><a href="mailto:betimhasani3@gmail.com" aria-label="Email"><i class="fas fa-envelope"></i>mail</a></li>
+          <li><a href="https://www.instagram.com/bbetimhasani" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i>Instagram</a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=100089712801772" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i>Facebook</a></li>
+          <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=betimhasani3@gmail.com" target="_blank" aria-label="Email"><i class="fas fa-envelope"></i>mail</a></li>
           </ul>
         </div>
       </div>
