--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
     <!-- ABOUT ME -->
      <div class="about-me" id="about-me">
         <div class="content">
-            <div class="image" data-aos="zoom-in" data-aos-duration="1300"></div>
             <div class="text" data-aos="zoom-in" data-aos-duration="1300">
-                <h1> <i class="fas fa-id-card" style="margin-right: .5em;"></i>About me</h1>
+                <h1>About me<i class="fas fa-id-card" style="margin-left: .5em;"></i></h1>
                 <p>I'm <span>Betim Hasani</span>, a passionate front-end developer who loves building clean, modern, and responsive websites. With a strong foundation in HTML, CSS, and JavaScript, I focus on creating user-friendly interfaces that deliver great user experiences.
                 I enjoy turning ideas into code and continuously learning new technologies to stay ahead in the fast-evolving web world. Whether it's building personal projects or helping clients bring their vision to life — I’m all about clean design and performance thanks to:</p>
                 <div class="skills">
@@ -79,8 +78,10 @@
                     <h1>CSS</h1>
                     <h1>JS</h1>
                 </div>
-                <a href="https://github.com/betimh" class="explore">Explore<i class="fa-solid fa-arrow-down" style="margin-left: 1em;"></i></a>
+                <a href="https://github.com/betimh" class="explore">Explore</a>
             </div>
+                        <div class="image" data-aos="zoom-in" data-aos-duration="1300"></div>
+
         </div>
      </div>
      <!-- skills -->
@@ -205,8 +206,7 @@
      <!-- GALLERY  -->
 <div class="gallery" id="gallery">
   <div class="title" data-aos="fade-up" data-aos-duration="1300">
-      <i class="fa-brands fa-pix"></i>
-      <h1>Gallery</h1>
+      <h1>Gallery </h1><i class="fa-brands fa-pix"></i>
   </div>
         <div class="cards" data-aos="zoom-in" data-aos-duration="1500">
             <div class="card">
@@ -233,7 +233,7 @@
                 </div>
                 <div class="text">
                     <h1>Portfolio</h1>
-                    <p>A clean, modern website built with HTML, CSS, and JavaScript showcasing portfolio</p>
+                    <p>A clean, modern portfolio website built with HTML, CSS, and JavaScript showcasing my 2nd portfolio design</p>
                     <a href="https://betimh.github.io/Portfolio/">Visit <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -243,7 +243,7 @@
             <div class="card">
                 <div class="image"><img src="images/lambo.png" alt="" srcset=""></div>
                 <div class="text">
-                    <h1>E-commerce site</h1>
+                    <h1>E-commerce</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur molestias atque iusto provident </p>
                     <a href="https://betimh.github.io/lamborghini">Visit <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
@@ -257,11 +257,11 @@
                 </div>
             </div>
              <div class="card">
-                <div class="image"><img src="images/elite.png" alt="" srcset=""></div>
+                <div class="image"><img src="images/modern.png" alt="" srcset=""></div>
                 <div class="text">
-                    <h1>Restaurant Menu</h1>
-                    <p>A clean and appetizing digital menu design showcasing dishes with easy navigation.</p>
-                    <a href="https://betimh.github.io/elitedigital">Visit <i class="fa-solid fa-arrow-right"></i></a>
+                    <h1>Technology</h1>
+                    <p>A clean tech design showcasing elite phone and electrical products featuring responsive design </p>
+                    <a href="https://betimh.github.io/modernwebsite/">Visit <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
   </div>
