--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="image"><img src="images/nmk.png" alt="" srcset=""></div>
                 <div class="text">
                     <h1>Country-Web</h1>
-                    <p>A rustic-themed informational website celebrating country culture, featuring rich visuals and user-friendly navigation.</p>
+                    <p>Informational website celebrating country culture, featuring rich visuals and user-friendly navigation.</p>
                     <a href="https://betimh.github.io/nmk">Visit <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                 <div class="image"><img src="images/modern.png" alt="" srcset=""></div>
                 <div class="text">
                     <h1>Technology</h1>
-                    <p>A clean tech design showcasing elite phone and electrical products featuring responsive design </p>
+                    <p>A clean tech design showcasing elite phone and electrical products featuring cool responsive design </p>
                     <a href="https://betimh.github.io/modernwebsite/">Visit <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
