finalised the project

--- a/index.html
+++ b/index.html
@@ -241,11 +241,11 @@
 
         <div class="cards" id="noncards" data-aos="zoom-in" data-aos-duration="1500">
             <div class="card">
-                <div class="image"><img src="images/lambo.png" alt="" srcset=""></div>
+                <div class="image"><img src="images/vogue.png" alt="" srcset=""></div>
                 <div class="text">
-                    <h1>E-commerce</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur molestias atque iusto provident </p>
-                    <a href="https://betimh.github.io/lamborghini">Visit <i class="fa-solid fa-arrow-right"></i></a>
+                    <h1>Vogue</h1>
+                    <p>A really modest, fancy and clean parfume e-comerce site using pure html css and javascript</p>
+                    <a href="https://betimh.github.io/vogue">Visit <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
              <div class="card">
