--- a/index.html
+++ b/index.html
@@ -227,25 +227,26 @@
                     <a href="https://betimh.github.io/coffee2">Visit <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
-             <div class="card">
-                <div class="image">
-                    <img src="images/portfolio.png" alt="" srcset="">
-                </div>
-                <div class="text">
-                    <h1>Portfolio</h1>
-                    <p>A clean, modern portfolio website built with HTML, CSS, and JavaScript showcasing my 2nd portfolio design</p>
-                    <a href="https://betimh.github.io/Portfolio/">Visit <i class="fa-solid fa-arrow-right"></i></a>
-                </div>
-            </div>
-        </div>
 
-        <div class="cards" id="noncards" data-aos="zoom-in" data-aos-duration="1500">
-            <div class="card">
+             <div class="card">
                 <div class="image"><img src="images/vogue.png" alt="" srcset=""></div>
                 <div class="text">
                     <h1>Vogue</h1>
                     <p>A really modest, fancy and clean parfume e-comerce site using pure html css and javascript</p>
                     <a href="https://betimh.github.io/vogue">Visit <i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="cards" id="noncards" data-aos="zoom-in" data-aos-duration="1500">
+               <div class="card">
+                <div class="image">
+                    <img src="images/portfolio.png" alt="" srcset="">
+                </div>
+                <div class="text">
+                    <h1>Portfolio</h1>
+                    <p>A clean, modern portfolio website built with HTML, CSS, and JavaScript showcasing my portfolio design</p>
+                    <a href="https://betimh.github.io/Portfolio/">Visit <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
              <div class="card">
