--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/7019fddeed.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-    <link rel="icon" href="/images/logo.jpg" type="image/png"/>
+<link rel="icon" href="/images/logo.jpg" type="image/jpeg">
     <title>Betim Hasani | Frontend Developer Portfolio</title>
 
   <!-- Meta Description (shows in Google search under the title) -->
