--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://kit.fontawesome.com/7019fddeed.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
-<link rel="icon" href="favicon.png" type="image/png">
-<link rel="shortcut icon" href="favicon.png" type="image/png">
+<link rel="icon" href="favicon.ico" type="image/png">
+<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 <link rel="apple-touch-icon" href="favicon.png">
     <title>Betim Hasani | Frontend Developer Portfolio</title>
 
